--- a/vitalHub/package.json
+++ b/vitalHub/package.json
@@ -24,6 +24,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1304.0",
+    "react-native-select-dropdown": "^3.4.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
