--- a/vitalHub/package.json
+++ b/vitalHub/package.json
@@ -29,7 +29,9 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-select-dropdown": "^3.4.0",
     "styled-components": "^6.1.8",
-    "react-native-maps": "1.10.0"
+    "react-native-maps": "1.10.0",
+    "expo-camera": "~14.1.1",
+    "expo-media-library": "~15.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
